--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="/threejs-baseline/index.f0859531.css"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon shortcut" href="/threejs-baseline/favicon.1b9a6aad.ico"><title>HBD Anwar! </title></head><body> <div id="start"> <div class="text"> it's your birthday, and as the tradition goes.. every one gets a present this day..<br> albeit in few conditions: <ul> <li>Pop up the balloon u see 22 times until it falls and you get the present</li> <li>if the gift goes out the container before popping all the balloons, you lose </li> </ul> <button id="play-btn">Start</button> </div> </div> <div id="loading" class="snippet" data-title=".dot-flashing"> <div class="stage"> <div class="dot-flashing"></div> </div> </div> <div class="experience"> <canvas class="experience-canvas"></canvas> <div id="css"></div> </div> <div id="game-over"> <div class="reborn"> <p>Would you like to be reborn?</p> <div class="options"> <div class="option"> <div class="arrow-right"></div> <div>Yes</div> </div> <div class="option"> <div></div> <div>No</div> </div> </div> </div> </div> <div id="end-game"> <div class="end-text"> <p class="end-main">Give It Up</p> You can never beat this game, it's broken (as was your original cancelled gift) <br> Wait for few days more, or weeks, who knows....<br> </div> </div> <script>const gameover=document.getElementById("game-over"),threed=document.querySelector(".experience"),options=document.querySelectorAll(".option div:first-child"),loadscreen=document.getElementById("loading"),start=document.getElementById("start"),play_btn=document.getElementById("play-btn"),endgame=document.getElementById("end-game");gameover.remove(),endgame.remove();</script> <script type="module" src="/threejs-baseline/index.9d3aaa32.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head><link rel="stylesheet" href="/index.4d663569.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/favicon.df2340ab.ico">
+    <title>HBD Anwar! </title>
+
+</head>
+
+<body>
+
+    <div id="start">
+    <div class="text">
+        it's your birthday, and as the tradition goes.. every one gets a present this day..<br>
+         albeit in few conditions:
+        <ul>
+            <li>Pop up the balloon u see 22 times until it falls and you get the present</li>
+            <li>if the gift goes out the container before popping all the balloons, you lose </li>
+        </ul> 
+        <button id="play-btn">Start</button>
+    </div> 
+
+
+   
+      </div>
+    <div id="loading" class="snippet" data-title=".dot-flashing">
+        <div class="stage">
+          <div class="dot-flashing"></div>
+        </div>
+      </div>
+    <div class="experience">
+        <canvas class="experience-canvas"></canvas>
+        <div id="css"></div>
+
+    </div>
+    <div id="game-over">
+        <div class="reborn">
+
+            <p>Would you like to be reborn?</p>
+            <div class="options">
+
+                <div class="option">
+                    <div class="arrow-right"></div>
+                    <div>Yes</div>
+                </div>
+                <div class="option">
+                    <div></div>
+                   <div>No</div> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="end-game">
+      
+        <div class="end-text">
+            <p class="end-main">Give It Up</p>
+       You can never beat this game, it's broken (as was your original cancelled gift) <br>
+       Wait for few days more, or weeks, who knows....<br>
+        </div> 
+
+    </div>
+
+    <script>const gameover = document.getElementById("game-over");
+const threed = document.querySelector(".experience");
+const options = document.querySelectorAll(".option div:first-child");
+const loadscreen = document.getElementById("loading");
+const start = document.getElementById("start");
+const play_btn = document.getElementById("play-btn");
+const endgame = document.getElementById("end-game");
+gameover.remove();
+endgame.remove();
+
+</script>
+
+
+    <script src="/index.18dbc454.js" defer=""></script>
+</body>
+
+</html>
